<resources>
    <string name="app_name">质感编程助手</string>
    <string name="first_usage">在首次使用之前，我们需要以下权限</string>
    <string name="welcome">欢迎使用</string>
    <string name="start">开始使用</string>
    <string name="external_storage_permission">外部存储权限</string>
    <string name="external_storage_permission_tip">受安卓版本影响，App需要获取【外部存储权限】才能正常运行</string>
    <string name="manage_storage_permission">所有文件访问权限</string>
    <string name="manage_storage_permission_tip">受沙盒存储机制的影响，App需要授予【所有文件访问权限】才能正常运行</string>
    <string name="please_allow_permission">请先授予对应权限！</string>
    <string name="kill_self">再按一次退出程序</string>

    <string name="reference">参考文档</string>
    <string name="tools">快捷工具</string>
    <string name="notes">质感笔记</string>

    <string name="page_flow">上次页面</string>

    <string name="tieCode">结绳4.0</string>
    <string name="android">安卓原生</string>
    <string name="compose">Jetpack Compose</string>
    <string name="iv5">iApp-V5</string>
    <string name="iv5_cn">iApp-V5-中文</string>
    <string name="iGame">iApp-Game</string>
    <string name="iGame_cn">iApp-Game-中文</string>
    <string name="iv3">iApp-V3</string>
    <string name="iv6">iApp-V6</string>
    <string name="iv3_java">iApp-V3-iJava</string>
    <string name="iv3_lua">iApp-V3-iLua</string>
    <string name="iv3_js">iApp-V3-iJS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation">导航</string>
    <string name="more">更多</string>
    <string name="watch">查看</string>
    <string name="search_app">搜索内容</string>
    <string name="no_msg">暂无数据</string>
    <string name="none_data">暂无数据</string>
    <string name="author">作者：</string>

    <string name="toast">提示</string>
    <string name="arrow">同意</string>
    <string name="definite">确定</string>
    <string name="cannot_go_back">已经不能回退啦~</string>
    <string name="go_back">回退</string>

    <!--toast-->
    <string name="clip">已将文本复制到剪切板</string>

    <!--net-->
    <string name="common_error_net">网络异常,请检查网络连接！</string>
    <string name="common_error_net_time_out">网络超时</string>
    <string name="common_error_do_something_fail">操作异常</string>
    <string name="common_error_request">请求错误</string>
    <string name="common_error_server">服务器错误</string>
    <string name="common_error_server_json">服务器错误:Json格式错误</string>
    <string name="copy">复制</string>
    <string name="load_failed">加载失败</string>
    <string name="join_us">加入我们</string>

    <string name="lang_java">Java</string>
    <string name="lang_kt">Kotlin</string>
    <string name="lang_tie_lang">TieLang</string>
    <string name="lang_cpp">C++</string>
    <string name="lang_html">HTML</string>
    <string name="lang_py">Python</string>
    <string name="lang_js">JS</string>
    <string name="lang_xml">XML</string>
    <string name="lang_lua">Lua</string>
    <string name="lang_md">MD</string>
    <string name="lang_iyu">裕语言</string>
    <string name="lang_json">JSON</string>

    <string name="date_format">yyyy年MM月dd日</string>

    <string name="choose_note_type">选择笔记语言</string>
    <string name="lang_tip">语言：</string>
    <string name="charset_utf8">UTF-8</string>
    <string name="note_title">标题</string>
    <string name="line_wrap">自动换行</string>
    <string name="preview">预览</string>
    <string name="note_preview">笔记预览</string>
    <string name="no_note">暂无笔记</string>
    <string name="check_all">选择全部</string>
    <string name="check_more">多选</string>
    <string name="remove_checked">删除选中</string>
    <string name="search_note">搜索笔记</string>

    <string name="no_checked">您还没有选择要删除的笔记哦</string>
    <string name="arrow_remove">确定要删除选择的笔记吗</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="delete_finished">删除完成</string>
    <string name="undo">撤回</string>
    <string name="redo">重做</string>
    <string name="save">保存</string>

    <string name="ali_icon">阿里矢量图标</string>
    <string name="md_color_scheme">MD配色参考</string>
    <string name="color_picker">图片取色器</string>
    <string name="shearing_board">快捷剪切板</string>

    <string name="download_icon">下载图标</string>
    <string name="ali_icon_repository">阿里矢量图标库</string>
    <string name="ali_icon_tips">本功能由iconfont.cn提供云计算服务</string>
    <string name="search_icon">搜索图标</string>
    <string name="please_input">请输入搜索内容</string>
    <string name="load_fail">加载失败</string>
    <string name="not_find">暂无图标</string>
    <string name="to_bottom">到底啦</string>
    <string name="derive_to">导出为：</string>
    <string name="pic_svg">SVG图片</string>
    <string name="pic_png">PNG图片</string>
    <string name="width">宽</string>
    <string name="height">高</string>
    <string name="save_path">保存路径</string>
    <string name="file_name">文件名</string>

    <string name="please_input_path">请输入保存路径</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="please_input_wh">请输入宽高</string>
    <string name="please_input_name">请输入文件名</string>

    <string name="analysis_fail">解析失败</string>
    <string name="edit_color">编辑颜色</string>
    <string name="color">设置颜色</string>
    <string name="pic_vector">安卓矢量图</string>
    <string name="settings">设置</string>
    <string name="open_source_address">开源地址</string>

    <string name="ali_icon_path">阿里矢量图标库保存路径</string>
    <string name="set_path">自定义路径</string>
    <string name="path">路径</string>
    <string name="title_activity_color_scheme">ColorSchemeActivity</string>

    <string name="can_vibrate">物理触感反馈</string>
    <string name="can_vibrate_tip">打开后点击某按钮会触发振动，搭载了线性马达的设备体验更佳</string>

    <string name="set_home_page">设置首页</string>
    <string name="set_home_page_tip">自定义启动APP后的显示页面</string>

    <string name="data_error">数据解析失败</string>
    <string name="copied_color">已将颜色码复制到剪切板</string>
    <string name="long_touch_copy">长按复制颜色</string>
    <string name="choose_pic">选择图片</string>
    <string name="zoom">缩放</string>
    <string name="get_color">取色</string>
    <string name="copy_color">复制颜色</string>
    <string name="please_choose_pic">请先选择图片</string>

    <string name="feedback_bug">可点击右上角复制按钮复制，并提交给开发者，QQ：2205903933</string>
    <string name="app_error">软件发生错误</string>
    <string name="crash_handler">异常捕捉器</string>
    <string name="copy_error">已将闪退日志复制带剪切板</string>

    <string name="show_window">显示悬浮窗</string>
    <string name="clip_service_id">快捷剪切板核心服务</string>
    <string name="process_name">核心进程服务</string>
    <string name="clip_service_title">快捷剪切板</string>
    <string name="title_activity_post_dev">PostDevActivity</string>

    <string name="post_dev">POST DEV</string>
    <string name="request">请求</string>
    <string name="response">响应</string>
    <string name="fun_get">GET</string>
    <string name="request_url">请求网址</string>
    <string name="send">发送</string>

    <string name="params">参数</string>
    <string name="headers">请求头</string>
    <string name="request_body">请求体</string>
    <string name="key">键</string>
    <string name="params_value">值</string>
    <string name="add">添加</string>
    <string name="body_none">none</string>
    <string name="body_form_data">form-data</string>
    <string name="body_x_www_form_urlencoded">x-www-form-urlencoded</string>
    <string name="body_raw">raw</string>
    <string name="body_binary">binary</string>
    <string name="form_data_text">TEXT</string>
    <string name="form_data_file">FILE</string>
    <string name="choose_file">选择文件</string>
    <string name="none_content">此请求没有正文</string>
    <string name="raw_type">正文类型：</string>
    <string name="open_file_failed">文件打开失败</string>
    <string name="file_is_large">文件过大</string>
    <string name="file_is_reading">文件读取中</string>
    <string name="file_info">文件名：%1$s\n文件大小：%2$s\n修改时间：%3$s</string>
    <string name="body_result">响应体</string>
    <string name="posting">请求数据中……</string>

    <string name="temporarily_not_supported">暂不支持此请求方法</string>
    <string name="please_input_url">请输入网址</string>
    <string name="open_failed">打开失败</string>

    <string name="response_state">状态：%1$s\t\t\t时间：%2$s毫秒\t\t\t大小：%3$s</string>
    <string name="clear_choose">取消选择</string>

    <string name="note_catalogue">笔记目录</string>
    <string name="no_title">无标题</string>

    <string name="sort_reference_page">自定义参考文档页面</string>
    <string name="sort_reference_page_tip">隐藏或排序参考文档页面</string>
    <string name="sort_reference_dialog_title">长按拖动排序</string>
    <string name="save_sort_reference">设置成功！重启APP后生效</string>
    <string name="hexadecimal_conversion">进制转换</string>
    <string name="hexadecimal_conversion_tip">最多保留16位小数</string>
    <string name="binary">二进制（BIN）</string>
    <string name="octal">八进制（OCT）</string>
    <string name="decimal">十进制（DEC）</string>
    <string name="hexadecimal">十六进制（HEX）</string>

</resources>