<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.tools.postdev.request.BodyFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_none"
                android:id="@+id/body_none"
                android:layout_marginStart="@dimen/large" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_form_data"
                android:id="@+id/body_form_data"
                android:layout_marginStart="@dimen/small"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_x_www_form_urlencoded"
                android:id="@+id/body_x_www_form_urlencoded"
                android:layout_marginStart="@dimen/small"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_raw"
                android:id="@+id/body_raw"
                android:layout_marginStart="@dimen/small"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_binary"
                android:layout_marginStart="@dimen/small"
                android:id="@+id/body_binary"
                android:layout_marginEnd="@dimen/large"/>

        </RadioGroup>

    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bodyFrame"/>

</androidx.appcompat.widget.LinearLayoutCompat>