<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.tools.ColorPickerActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            app:title="@string/color_picker"
            android:id="@+id/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:animateLayoutChanges="true">

        <uk.co.senab.photoview.PhotoView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ly.android.material.code.tool.ui.view.CoordinateView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/coordinatorView"/>

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:elevation="@dimen/dp_6">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:layout_marginBottom="@dimen/large"
            android:text="@string/choose_pic"
            android:layout_weight="1"
            android:id="@+id/choosePic"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginTop="@dimen/large"
            android:layout_marginBottom="@dimen/large"
            android:text="@string/zoom"
            android:layout_weight="1"
            android:id="@+id/changeAction"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginTop="@dimen/large"
            android:layout_marginBottom="@dimen/large"
            android:text="@string/copy_color"
            android:layout_weight="1"
            android:id="@+id/copyColor"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>